# coach

./: .gitignore  coach.py  pyproject.toml  recorder.py  requirements.txt
coach/: coach.py  ocr.py  recorder.py  utils.py
tests/: test_coach.py  testing.ipynb
